# polyglot_aoc_2022

./: .gitignore  README.md
.helix/: config.toml
c#/Day1/: Day1.sln  Program.cs
c#/day1/: Day1.sln  Program.cs
c#/day2/: Program.cs  day2.sln
c++/day1/: .clang-format  CMakeLists.txt  vcpkg.json
c++/day1/include/day1/: core_func.h
c++/day1/src/: main.cpp
c++/day1/tests/: main.cpp  split_tests.cpp  sum_string_tests.cpp
c++/day2/: CMakeLists.txt
c++/day3/: CMakeLists.txt
c++/day3/include/: core_func.h
c++/day3/src/: main.cpp
c++/day3/tests/: find_duplicate_chars.test.cpp  split_string_at_middle.test.cpp
c/Day1/: CMakeLists.txt
c/day1/: CMakeLists.txt  int_array.h  main.c
f#/Day1/: Day1.sln
f#/day1/: Day1.fsproj
f#/day2/: Day2.sln  Program.fs
f#/day3/: Item.fs  Program.fs  day3.fsproj  day3.sln
f#/day4/: Program.fs  day4.sln
f#/day5/: Program.fs  day5.sln
f#/day6/: Functions.fs  Program.fs  Tests.fs  day6.fsproj  day6.sln
go/day1/: day1.go
go/day10/: day10.go
go/day2/: day2.go
go/day3/: day3.go  go.mod
go/day4/: day4.go
go/day5/: day5.go  go.mod
go/day6/: day6.go  go.mod
go/day7/: day7.go  go.mod
go/day8/: day8.go
typescript/day1/: .eslintrc.json  deno.json  package.json  tsconfig.json
typescript/day10/: .eslintrc.yml  package.json  pnpm-lock.yaml  program.ts  tsconfig.json
typescript/day2/: .eslintrc.json  deno.json  package.json
typescript/day3/: .eslintrc.json  deno.json  jest.config.js  package.json  tsconfig.json
typescript/day4/: deno.json
typescript/day5/: deno.json
typescript/day6/: day6.ts  (+3 more)
(+36 files in other folders)
